# dserver-token-generator-plugin-oauth2

./: .env.template  README.md  pyproject.toml
dserver_token_generator_plugin_oauth2/: __init__.py  blueprint.py  cli.py  config.py  jwt_utils.py  plugin.py  user_provisioning.py
provider-docs/: orcid.md
