[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dserver-token-generator-plugin-oauth2"
version = "0.1.0"
description = "OAuth 2.0 token generator plugin for dserver"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "flask>=2.0.0",
    "authlib>=1.2.0",
    "httpx>=0.24.0",
    "PyJWT>=2.0.0",
    "cryptography>=3.4.0",
    "dservercore>0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
]

[project.entry-points."dserver.token_generator"]
oauth2 = "dserver_token_generator_plugin_oauth2:OAuth2TokenGeneratorPlugin"

[project.entry-points."flask.commands"]
oauth2 = "dserver_token_generator_plugin_oauth2.cli:oauth2_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["dserver_token_generator_plugin_oauth2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
